--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -6,7 +6,7 @@
   <div class="left-box">
     <div class="links">
       <a href="#" class="fa fa-gamepad logo"></a>
-      <a href="/public/game.html">GodOfWar</a>
+      <a href="/public/index.html">GodOfWar</a>
     </div>
     <ul style="gap: 30px">
       <li id="store">
@@ -100,397 +100,9 @@
 </nav>
 
 <style>
-  nav .left-box ul li,
-  nav .nav-icons li {
-    padding: 10px;
-    position: relative;
-  }
-  nav .nav-icons li {
-    cursor: pointer;
-  }
-  nav .nav-icons ul {
-    position: absolute;
-    background-color: #080325;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 350px;
-    top: 80px;
-    right: 0;
-    transition: 0.4s ease-in-out;
-  }
-  nav .nav-icons ul li a {
-    color: #fff;
-    position: relative;
-  }
-  nav .nav-icons ul li a::after {
-    content: "";
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 2px;
-    background-color: #777;
-    transition: 0.4s ease-in-out;
-  }
-  nav .nav-icons ul li a:hover::after {
-    width: 100%;
-  }
-  nav .nav-icons ul::after {
-    content: "";
-    position: absolute;
-    top: -25px;
-    right: 15px;
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 15px;
-    border-color: transparent transparent #080325 transparent;
-  }
-  .left-box ul li::after,
-  nav .nav-icons li::after {
-    bottom: -6px;
-    left: 10px;
-    position: absolute;
-    font-size: 12px;
-    color: gray;
-  }
-  nav .nav-icons > li:first-child:before {
-    content: "5";
-    font-size: 12px;
-    font-weight: bold;
-    position: absolute;
-    top: 4px;
-    right: -5px;
-    height: 16px;
-    width: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #d92b4c;
-    color: white;
-  }
-  .navbar #bars,
-  nav .nav-icons i,
-  nav .nav-icons li a {
-    color: #fff;
-  }
-
-  .nav-icons li form {
-    position: absolute;
-    background-color: #080325;
-    padding: 30px;
-    width: 350px;
-    display: flex;
-    gap: 25px;
-    flex-wrap: wrap;
-    top: 80px;
-    right: 0;
-    transition: 0.4s ease-in-out;
-    text-transform: capitalize;
-    color: #fff;
-    opacity: 0;
-  }
-  .nav-icons #user-icon:hover > form {
-    opacity: 1;
-  }
-  .nav-icons li form::after {
-    content: "";
-    position: absolute;
-    top: -25px;
-    right: 15px;
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 15px;
-    border-color: transparent transparent #080325 transparent;
-  }
-  .nav-icons li form input {
-    flex: 100%;
-  }
-  .nav-icons li form input[type="text"],
-  .nav-icons li form input[type="password"] {
-    height: 30px;
-    border: none;
-    outline: none;
-    padding: 10px;
-    font-size: 15px;
-  }
-  .nav-icons li form input[type="submit"] {
-    padding: 10px 0px;
-  }
-  .nav-icons li form input[type="checkbox"] {
-    position: relative;
-    margin-right: 20px;
-    margin-left: 10px;
-  }
-  .nav-icons li form input[type="checkbox"]::after {
-    content: "\f00c";
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
-    display: flex;
-    font-size: 25px;
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    opacity: 0;
-    z-index: 3;
-    transition: 0.4s;
-  }
-  .nav-icons li form input[type="checkbox"]::before {
-    content: "";
-    position: absolute;
-    background-color: #FFF;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    padding: 6px;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-  }
-  .nav-icons li form input[type="checkbox"]:checked::after {
-    opacity: 1;
-  }
-  .nav-icons li form label {
-    display: block;
-    text-transform: capitalize;
-  }
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(8, 3, 37, 0.4);
-    padding: 15px;
-    position: absolute;
-    top: 0;
-    z-index: 50;
-    width: 100%;
-  }
-  @keyframes slide {
-    0% {
-      transform: translateY(-20px);
-    }
-    100% {
-      transform: translateY(0px);
-    }
-  }
-  .fixed-nav {
-    position: fixed;
-    animation: slide 0.5s linear;
-    background-color: #0a0526;
-    z-index: 10;
-  }
-  .navbar {
-    position: relative;
-    width: 100%;
-  }
-  .navbar #bars {
-    font-size: 25px;
-  }
-  #check,
-  label {
-    display: none;
-  }
-  nav .left-box {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  nav ul {
-    display: flex;
-    align-items: center;
-  }
-  .left-box .links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-  }
-  .left-box .links .logo {
-    font-size: 50px;
-    color: #fff;
-  }
-  .left-box a:nth-child(2) {
-    font-size: 35px;
-    color: #fff;
-  }
-  .left-box i {
-    color: #fff;
-  }
-  .left-box ul li a {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-  .left-box ul li:first-child::after {
-    content: "games";
-  }
-  .left-box i {
-    position: absolute;
-    top: 50%;
-    right: -4px;
-    font-size: 10px;
-    transition: 0.4s;
-  }
-  .left-box .sub-menu {
-    position: absolute;
-    background-color: #080325;
-    padding: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    width: 350px;
-    top: 80px;
-    left: 0;
-    transition: 0.4s ease-in-out;
-  }
-  .left-box .sub-menu::after {
-    content: "";
-    position: absolute;
-    top: -25px;
-    left: 15px;
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 15px;
-    border-color: transparent transparent #080325 transparent;
-  }
-  .left-box .sub-menu li {
-    flex: 50%;
-  }
-  .left-box .sub-menu li a {
-    text-transform: capitalize;
-    position: relative;
-  }
-  .left-box .sub-menu li a::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 2px;
-    background-color: #777;
-    transition: 0.4s ease-in-out;
-  }
-  .left-box .sub-menu li a:hover::after {
-    width: 100%;
-  }
-
-  .left-box ul li:nth-child(2):after {
-    content: "news";
-  }
-  .left-box ul li:last-child::after {
-    content: "full list";
-  }
-  .left-box .sub-menu li::after {
-    content: "" !important;
-  }
-  nav .nav-icons {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-  nav .nav-icons > li:first-child:after {
-    content: "user";
-  }
-
-  @media (max-width: 767px) {
-    nav {
-      flex-direction: column;
-      justify-content: flex-start;
-      background-color: #080325 !important;
-      z-index: 10;
-      position: fixed;
-      height: 100%;
-      width: 0;
-      right: -30px;
-      top: 0;
-      align-items: flex-start;
-      transition: 0.4s ease-in-out;
-    }
-    .navbar {
-      padding: 10px;
-    }
-    #check:checked ~ nav {
-      width: 75%;
-    }
-    #check:not(:checked) ~ nav {
-      width: 0;
-    }
-    label {
-      display: block;
-    }
-    nav .left-box,
-    nav ul {
-      flex-direction: column;
-      align-items: flex-start !important;
-    }
-    nav .left-box ul {
-      gap: 20px;
-    }
-    nav .nav-icons {
-      flex-direction: column;
-      align-items: flex-start !important;
-      margin-top: 20px;
-    }
-  }
+.left-box .sub-menu li a:hover::after,.navbar,nav,nav .nav-icons ul li a:hover::after{width:100%}.left-box .sub-menu::after,.nav-icons li form::after,nav .nav-icons ul::after{top:-25px;height:0;border-style:solid;border-width:15px;border-color:transparent transparent #080325}nav .left-box ul li,nav .nav-icons li{padding:10px;position:relative}.left-box .sub-menu,.nav-icons li form,nav .nav-icons ul{background-color:#080325;padding:30px;width:350px;top:80px;transition:.4s ease-in-out;display:flex}nav .nav-icons li{cursor:pointer}nav .nav-icons ul{position:absolute;flex-direction:column;align-items:flex-start;right:0}nav .nav-icons ul li a{color:#fff;position:relative}nav .nav-icons ul li a::after{content:"";position:absolute;bottom:-5px;left:50%;transform:translateX(-50%);width:0;height:2px;background-color:#777;transition:.4s ease-in-out}.nav-icons li form::after,nav .nav-icons ul::after{content:"";position:absolute;right:15px;width:0}.left-box ul li::after,nav .nav-icons li::after{bottom:-6px;left:10px;position:absolute;font-size:12px;color:gray}nav .nav-icons>li:first-child:before{content:"5";font-size:12px;font-weight:700;position:absolute;top:4px;right:-5px;height:16px;width:16px;display:flex;justify-content:center;align-items:center;border-radius:50%;background-color:#d92b4c;color:#fff}.navbar #bars,nav .nav-icons i,nav .nav-icons li a{color:#fff}.nav-icons li form{position:absolute;gap:25px;flex-wrap:wrap;right:0;text-transform:capitalize;color:#fff;opacity:0}.nav-icons #user-icon:hover>form,.nav-icons li form input[type=checkbox]:checked::after{opacity:1}.nav-icons li form input{flex:100%}.nav-icons li form input[type=password],.nav-icons li form input[type=text]{height:30px;border:none;outline:0;padding:10px;font-size:15px}.nav-icons li form input[type=submit]{padding:10px 0}.nav-icons li form input[type=checkbox]{position:relative;margin-right:20px;margin-left:10px}.nav-icons li form input[type=checkbox]::after{content:"\f00c";font-family:"Font Awesome 6 Free";font-weight:700;display:flex;font-size:25px;justify-content:center;align-items:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);opacity:0;z-index:3;transition:.4s}.nav-icons li form input[type=checkbox]::before{content:"";position:absolute;background-color:#fff;width:100%;height:100%;z-index:2;padding:6px;top:50%;left:50%;transform:translate(-50%,-50%)}.nav-icons li form label{display:block;text-transform:capitalize}nav{display:flex;justify-content:space-around;align-items:center;background-color:rgba(8,3,37,.4);padding:15px;position:absolute;top:0;z-index:50}@keyframes slide{0%{transform:translateY(-20px)}100%{transform:translateY(0)}}.fixed-nav{position:fixed;animation:.5s linear slide;background-color:#0a0526;z-index:10}.navbar{position:relative}.navbar #bars{font-size:25px}#check,label{display:none}nav .left-box{display:flex;align-items:center;gap:10px}nav ul{display:flex;align-items:center}.left-box .links{display:flex;justify-content:space-between;align-items:center;gap:10px}.left-box .links .logo{font-size:50px;color:#fff}.left-box a:nth-child(2){font-size:35px;color:#fff}.left-box i{color:#fff;position:absolute;top:50%;right:-4px;font-size:10px;transition:.4s}.left-box ul li a{color:#fff;text-transform:uppercase;font-size:15px}.left-box ul li:first-child::after{content:"games"}.left-box .sub-menu{position:absolute;flex-wrap:wrap;left:0}.left-box .sub-menu::after{content:"";position:absolute;left:15px;width:0}.left-box .sub-menu li{flex:50%}.left-box .sub-menu li a{text-transform:capitalize;position:relative}.left-box .sub-menu li a::after{content:"";display:block;position:absolute;bottom:-5px;left:50%;transform:translateX(-50%);width:0;height:2px;background-color:#777;transition:.4s ease-in-out}.left-box ul li:nth-child(2):after{content:"news"}.left-box ul li:last-child::after{content:"full list"}.left-box .sub-menu li::after{content:""!important}nav .nav-icons{display:flex;align-items:center;gap:20px}nav .nav-icons>li:first-child:after{content:"user"}@media (max-width:767px){#check:not(:checked)~nav,nav{width:0}nav{flex-direction:column;justify-content:flex-start;background-color:#080325!important;z-index:10;position:fixed;height:100%;right:-30px;top:0;align-items:flex-start;transition:.4s ease-in-out}.navbar{padding:10px}#check:checked~nav{width:75%}label{display:block}nav .left-box,nav ul{flex-direction:column;align-items:flex-start!important}nav .left-box ul{gap:20px}nav .nav-icons{flex-direction:column;align-items:flex-start!important;margin-top:20px}}
 </style>
 
 <script>
-  window.onscroll = function () {
-    const nav = document.querySelector("#nav");
-    if (window.scrollY > 300) {
-      nav.classList.add("fixed-nav");
-    } else {
-      nav.classList.remove("fixed-nav");
-    }
-  };
-  const store = document.querySelector("#store");
-  store.onclick = function () {
-    toggleMenu("#store-list");
-    toggleArrow("#store");
-  };
-  const blog = document.querySelector("#blog");
-  blog.onclick = function () {
-    toggleMenu("#blog-list");
-    toggleArrow("#blog");
-  };
-  const features = document.querySelector("#features");
-  features.onclick = function () {
-    toggleMenu("#features-list");
-    toggleArrow("#features");
-  };
-
-  const user = document.querySelector("#user");
-  user.onclick = function () {
-    toggleMenu("#user-list");
-  };
-
-  function toggleMenu(el) {
-    const element = document.querySelector(el);
-    if (element.style.opacity === "0") {
-      element.style.opacity = "1";
-      element.style.zIndex = "50";
-    } else {
-      element.style.opacity = "0";
-      element.style.zIndex = "unset";
-    }
-  }
-  function toggleArrow(el) {
-    const arrow = document.querySelector(`${el} i`);
-    if (arrow.style.transform === "translateY(-50%) rotate(0deg)") {
-      arrow.style.transform = "translateY(-50%) rotate(180deg)";
-      console.log(arrow.style.transform);
-    } else {
-      arrow.style.transform = "translateY(-50%) rotate(0deg)";
-    }
-  }
+  window.onscroll=function(){let a=document.querySelector("#nav");window.scrollY>300?a.classList.add("fixed-nav"):a.classList.remove("fixed-nav")};const store=document.querySelector("#store");store.onclick=function(){toggleMenu("#store-list"),toggleArrow("#store")};const blog=document.querySelector("#blog");blog.onclick=function(){toggleMenu("#blog-list"),toggleArrow("#blog")};const features=document.querySelector("#features");features.onclick=function(){toggleMenu("#features-list"),toggleArrow("#features")};const user=document.querySelector("#user");function toggleMenu(b){let a=document.querySelector(b);"0"===a.style.opacity?(a.style.opacity="1",a.style.zIndex="50"):(a.style.opacity="0",a.style.zIndex="unset")}function toggleArrow(b){let a=document.querySelector(`${b} i`);"translateY(-50%) rotate(0deg)"===a.style.transform?(a.style.transform="translateY(-50%) rotate(180deg)",console.log(a.style.transform)):a.style.transform="translateY(-50%) rotate(0deg)"}user.onclick=function(){toggleMenu("#user-list")}
 </script>
