--- a/public/css/game.css
+++ b/public/css/game.css
@@ -114,7 +114,7 @@ main {
   position: absolute;
 }
 header::after {
-  background-image: url("/public/assets/header3.webp");
+  background-image: url("../assets/header3.webp");
   height: 100%;
   left: 50%;
   transform: translateX(-50%);
@@ -257,7 +257,7 @@ main .buttons a:last-child:hover {
 }
 .features::after {
   left: 0;
-  background-image: url("/public/assets/feature.webp");
+  background-image: url("../assets/feature.webp");
   z-index: 2;
   height: 100%;
 }
@@ -381,7 +381,7 @@ main .buttons a:last-child:hover {
   font-size: 25px;
 }
 .price {
-  background-image: url("/public/assets/price.webp");
+  background-image: url("../assets/price.webp");
   background-position: top;
   min-height: 60vh;
 }
@@ -405,7 +405,7 @@ main .buttons a:last-child:hover {
   transition: 0.4s ease-in-out;
 }
 .social {
-  background-image: url("/public/assets/contact.webp");
+  background-image: url("../assets/contact.webp");
 }
 .social .connect {
   margin-bottom: 30px;
