--- a/public/layouts/navbar.html
+++ b/public/layouts/navbar.html
@@ -6,7 +6,7 @@
   <div class="left-box">
     <div class="links">
       <a href="#" class="fa fa-gamepad logo"></a>
-      <a href="/public/index.html">GodOfWar</a>
+      <a href="../index.html">GodOfWar</a>
     </div>
     <ul style="gap: 30px">
       <li id="store">
