--- a/public/layouts/arabicNavbar.html
+++ b/public/layouts/arabicNavbar.html
@@ -6,73 +6,85 @@
   <div class="left-box">
     <div class="links">
       <a href="#" class="fa fa-gamepad logo"></a>
-      <a href="/public/index.html">GodOfWar</a>
+      <a href="../ar/arabic.html">جود اوف وار</a>
     </div>
     <ul style="gap: 30px">
       <li id="store">
-        <a href="#">Store</a>
+        <a href="#">المتجر</a>
         <i
           class="fa-solid fa-caret-down"
           style="transform: translateY(-50%) rotate(0deg)"
         ></i>
-        <ul class="sub-menu" id="store-list" style="opacity:0; visibility: hidden;">
-          <li><a href="#">Store Style 1</a></li>
-          <li><a href="#">Product Style 1</a></li>
-          <li><a href="#">Store Style 2</a></li>
-          <li><a href="#">Product Style 1</a></li>
-          <li><a href="#">Cart</a></li>
-          <li><a href="#">Checkout</a></li>
+        <ul
+          class="sub-menu"
+          id="store-list"
+          style="opacity: 0; visibility: hidden"
+        >
+          <li><a href="#">استايل المتجر 1</a></li>
+          <li><a href="#">استايل المنتج 1</a></li>
+          <li><a href="#">استايل المتجر 2</a></li>
+          <li><a href="#">استايل المنتج 1</a></li>
+          <li><a href="#">العربة</a></li>
+          <li><a href="#">الدفع</a></li>
         </ul>
       </li>
       <li id="blog">
-        <a href="#">Blog</a>
+        <a href="#">المقالات</a>
         <i
           class="fa-solid fa-caret-down"
           style="transform: translateY(-50%) rotate(0deg)"
         ></i>
-        <ul class="sub-menu" id="blog-list" style="opacity: 0; visibility: hidden;">
-          <li><a href="#">Blog Style 1</a></li>
-          <li><a href="#">Post Style 1</a></li>
-          <li><a href="#">Blog Style 2</a></li>
-          <li><a href="#">Post Style 2</a></li>
-          <li><a href="#">Blog Style 3</a></li>
-          <li><a href="#">Post Style 3</a></li>
+        <ul
+          class="sub-menu"
+          id="blog-list"
+          style="opacity: 0; visibility: hidden"
+        >
+          <li><a href="#">استايل المقالات 1</a></li>
+          <li><a href="#">استايل البريد 1</a></li>
+          <li><a href="#">استايل المقالات 2</a></li>
+          <li><a href="#">استايل البريد 2</a></li>
+          <li><a href="#">استايل المقالات 3</a></li>
+          <li><a href="#">استايل البريد 3</a></li>
         </ul>
       </li>
       <li id="features">
-        <a href="#">Features</a>
+        <a href="#">المميزات</a>
         <i
           class="fa-solid fa-caret-down"
           style="transform: translateY(-50%) rotate(0deg)"
         ></i>
-        <ul class="sub-menu" id="features-list" style="opacity: 0; visibility: hidden;">
-          <li><a href="#">Forums</a></li>
-          <li><a href="#">Widgets</a></li>
-          <li><a href="#">Forums Topics</a></li>
-          <li><a href="#">Components</a></li>
-          <li><a href="#">Matches List</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Match</a></li>
-          <li><a href="#">Search</a></li>
-          <li><a href="#">Match with Maps</a></li>
-          <li><a href="#">404</a></li>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Blank</a></li>
+        <ul
+          class="sub-menu"
+          id="features-list"
+          style="opacity: 0; visibility: hidden"
+        >
+          <li><a href="#">المنتديات</a></li>
+          <li><a href="#">الحاجيات</a></li>
+          <li><a href="#">مواضيع المنتديات</a></li>
+          <li><a href="#">العناصر</a></li>
+          <li><a href="#">قائمة المطابقات</a></li>
+          <li><a href="#">تواصل معنا</a></li>
+          <li><a href="#">مطابقة</a></li>
+          <li><a href="#">بحث</a></li>
+          <li><a href="#">مطابقة مع الخرائط</a></li>
+          <li><a href="#">٤٠٤</a></li>
+          <li><a href="#">دخول</a></li>
+          <li><a href="#">فارغ</a></li>
         </ul>
       </li>
     </ul>
   </div>
   <ul class="nav-icons">
     <li id="user">
-      <a href="#">Ahmed</a>
-      <ul style="opacity: 0; visibility: hidden;" id="user-list">
-        <li><a href="#">Activity</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">Messages Compose</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Documentation</a></li>
-        <li><a href="#">Purchase</a></li>
+      <a href="#">احمد</a>
+      <ul style="opacity: 0; visibility: hidden" id="user-list">
+        <li><a href="#">نشاط</a></li>
+        <li><a href="#">الملف الشخصى</a></li>
+        <li><a href="#">الرسائل</a></li>
+        <li><a href="#">تكوين الرسائل</a></li>
+        <li><a href="#">الاعدادات</a></li>
+        <li><a href="#">الوثائق</a></li>
+        <li><a href="#">الشراء</a></li>
       </ul>
     </li>
     <li>
@@ -83,24 +95,22 @@
     </li>
     <li id="user-icon">
       <i class="fa-solid fa-user fa-1x"></i>
-      <form style="opacity:0; visibility: hidden;" id="login-form">
-        <label for="username">Username:</label>
+      <form style="opacity: 0; visibility: hidden" id="login-form">
+        <label for="username">اسم المستخدم:</label>
         <input type="text" id="username" required autocomplete="off" />
-        <label for="password">Password:</label>
+        <label for="password">كلمة السر:</label>
         <input type="password" id="password" required />
         <div>
           <input type="checkbox" id="remember" />
-          <label style="display: inline-block" for="remember"
-            >Remember Me</label
-          >
+          <label style="display: inline-block" for="remember">تذكرنى</label>
         </div>
-        <input type="submit" value="Log In" />
-        <p><a href="#">Lost password?</a> | <a href="#">Register</a></p>
+        <input type="submit" value="تسجيل الدخول" />
+        <p><a href="#">نسيت كلمة السر ؟</a> | <a href="#">تسجيل</a></p>
       </form>
     </li>
     <li id="lang">
       <i class="fa-solid fa-globe"></i>
-      <ul id="lang-list" style="opacity:0; visibility: hidden;">
+      <ul id="lang-list" style="opacity: 0; visibility: hidden">
         <li><a href="/public/ar/arabic.html">عربى</a></li>
         <li><a href="/public/index.html">English</a></li>
       </ul>
@@ -111,9 +121,9 @@
 <style>
   .nav-icons li:last-child ul {
     width: 200px;
-    padding:10px;
-    top:70px;
-    right:0;
+    padding: 10px;
+    top: 70px;
+    right: -160px;
   }
   .left-box .sub-menu li a:hover::after,
   .navbar,
@@ -152,7 +162,7 @@
     position: absolute;
     flex-direction: column;
     align-items: flex-start;
-    right: 0;
+    left: 0;
   }
   nav .nav-icons ul li a {
     color: #fff;
@@ -173,13 +183,13 @@
   nav .nav-icons ul::after {
     content: "";
     position: absolute;
-    right: 15px;
+    left: 15px;
     width: 0;
   }
   .left-box ul li::after,
   nav .nav-icons li::after {
     bottom: -6px;
-    left: 10px;
+    right: 10px;
     position: absolute;
     font-size: 12px;
     color: gray;
@@ -190,7 +200,7 @@
     font-weight: 700;
     position: absolute;
     top: 4px;
-    right: -5px;
+    left: -2px;
     height: 16px;
     width: 16px;
     display: flex;
@@ -209,7 +219,7 @@
     position: absolute;
     gap: 25px;
     flex-wrap: wrap;
-    right: 0;
+    left: 0;
     text-transform: capitalize;
     color: #fff;
   }
@@ -232,8 +242,8 @@
   }
   .nav-icons li form input[type="checkbox"] {
     position: relative;
-    margin-right: 20px;
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-right: 10px;
   }
   .nav-icons li form input[type="checkbox"]::after {
     content: "\f00c";
@@ -321,14 +331,14 @@
     color: #fff;
   }
   .left-box a:nth-child(2) {
-    font-size: 35px;
+    font-size: 20px;
     color: #fff;
   }
   .left-box i {
     color: #fff;
     position: absolute;
-    top: 50%;
-    right: -4px;
+    top: 55%;
+    left: -4px;
     font-size: 10px;
     transition: 0.4s;
   }
@@ -338,17 +348,17 @@
     font-size: 15px;
   }
   .left-box ul li:first-child::after {
-    content: "games";
+    content: "الالعاب";
   }
   .left-box .sub-menu {
     position: absolute;
     flex-wrap: wrap;
-    left: 0;
+    right: 0;
   }
   .left-box .sub-menu::after {
     content: "";
     position: absolute;
-    left: 15px;
+    right: 15px;
     width: 0;
   }
   .left-box .sub-menu li {
@@ -371,10 +381,10 @@
     transition: 0.4s ease-in-out;
   }
   .left-box ul li:nth-child(2):after {
-    content: "news";
+    content: "الاخبار";
   }
   .left-box ul li:last-child::after {
-    content: "full list";
+    content: "القائمة"
   }
   .left-box .sub-menu li::after {
     content: "" !important;
@@ -385,7 +395,7 @@
     gap: 20px;
   }
   nav .nav-icons > li:first-child:after {
-    content: "user";
+    content: "المستخدم";
   }
   @media (max-width: 767px) {
     #check:not(:checked) ~ nav,
@@ -399,7 +409,7 @@
       z-index: 10;
       position: fixed;
       height: 100%;
-      right: -30px;
+      left: -30px;
       top: 0;
       align-items: flex-start;
       transition: 0.4s ease-in-out;
@@ -430,7 +440,7 @@
 </style>
 
 <script>
- window.onscroll = function () {
+  window.onscroll = function () {
     const nav = document.querySelector("#nav");
     if (window.scrollY > 300) {
       nav.classList.add("fixed-nav");
@@ -460,14 +470,14 @@
   };
 
   const lang = document.querySelector("#lang");
-  lang.onclick = function() {
+  lang.onclick = function () {
     toggleMenu("#lang-list");
-  }
+  };
 
   const user_icon = document.querySelector("#user-icon");
   user_icon.onclick = function () {
     toggleMenu("#login-form");
-  }
+  };
   function toggleMenu(el) {
     const element = document.querySelector(el);
     if (element.style.opacity === "0") {
