--- a/public/layouts/navbar.html
+++ b/public/layouts/navbar.html
@@ -6,7 +6,7 @@
   <div class="left-box">
     <div class="links">
       <a href="#" class="fa fa-gamepad logo"></a>
-      <a href="/public/index.html">GodOfWar</a>
+      <a href="index.html">GodOfWar</a>
     </div>
     <ul style="gap: 30px">
       <li id="store">
@@ -101,8 +101,8 @@
     <li id="lang">
       <i class="fa-solid fa-globe"></i>
       <ul id="lang-list" style="opacity:0; visibility: hidden;">
-        <li><a href="/public/ar/arabic.html">عربى</a></li>
-        <li><a href="/public/index.html">English</a></li>
+        <li><a href="ar/arabic.html">عربى</a></li>
+        <li><a href="index.html">English</a></li>
       </ul>
     </li>
   </ul>
