god of war website

--- a/public/layouts/arabicNavbar.html
+++ b/public/layouts/arabicNavbar.html
@@ -111,8 +111,8 @@
     <li id="lang">
       <i class="fa-solid fa-globe"></i>
       <ul id="lang-list" style="opacity: 0; visibility: hidden">
-        <li><a href="/public/ar/arabic.html">عربى</a></li>
-        <li><a href="/public/index.html">English</a></li>
+        <li><a href="../ar/arabic.html">عربى</a></li>
+        <li><a href="../index.html">English</a></li>
       </ul>
     </li>
   </ul>
