--- a/public/css/game.css
+++ b/public/css/game.css
@@ -2,6 +2,10 @@ header::after,
 header::before {
   left: 50%;
   transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
 }
 .demo,
 .price a,
@@ -55,6 +59,10 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
   color: #fff;
   font-size: 55px;
   font-weight: 700;
@@ -64,6 +72,10 @@ header {
   content: "";
   position: absolute;
   transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+  -webkit-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+  -moz-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+  -ms-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+  -o-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
   left: 50%;
   top: 50%;
 }
@@ -83,8 +95,17 @@ header {
   z-index: 2;
   animation-name: rotate;
   animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -o-animation-duration: 2s;
   animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: ease-in-out;
+  -moz-animation-timing-function: ease-in-out;
+  -o-animation-timing-function: ease-in-out;
 }
 .features::after,
 .features::before,
@@ -97,9 +118,20 @@ header::before {
 @keyframes rotate {
   0% {
     transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+    -webkit-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+    -moz-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+    -ms-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
+    -o-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg);
   }
   100% {
     transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg) rotate(360deg);
+    -webkit-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg)
+      rotate(360deg);
+    -moz-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg)
+      rotate(360deg);
+    -ms-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg)
+      rotate(360deg);
+    -o-transform: translate(-50%, -50%) rotate3d(2, 2, 3, 250deg) rotate(360deg);
   }
 }
 .holder {
@@ -138,11 +170,19 @@ main .buttons a {
   padding: 15px 20px;
   width: 150px;
   transform: skew(-12deg);
+  -webkit-transform: skew(-12deg);
+  -moz-transform: skew(-12deg);
+  -ms-transform: skew(-12deg);
+  -o-transform: skew(-12deg);
 }
 main {
   top: 50%;
   left: 35%;
   transform: translate(-50%, -40%);
+  -webkit-transform: translate(-50%, -40%);
+  -moz-transform: translate(-50%, -40%);
+  -ms-transform: translate(-50%, -40%);
+  -o-transform: translate(-50%, -40%);
   z-index: 6;
 }
 .social .wrapper .box i,
@@ -177,6 +217,10 @@ main .buttons a:first-child::before {
 main .buttons a:last-child {
   border: 2px solid #fff;
   transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
 }
 main .buttons a:last-child::before {
   font-family: "Font Awesome 6 Free";
@@ -319,6 +363,10 @@ main .buttons a:last-child:hover {
     text-align: center;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
   }
   main .buttons {
     gap: 0;
@@ -406,6 +454,10 @@ main .buttons a:last-child:hover {
   margin: 100px auto 0;
   font-size: 14px;
   transition: 0.4s ease-in-out;
+  -webkit-transition: 0.4s ease-in-out;
+  -moz-transition: 0.4s ease-in-out;
+  -ms-transition: 0.4s ease-in-out;
+  -o-transition: 0.4s ease-in-out;
 }
 .social {
   background-image: url("../assets/contact.webp");
