--- a/public/layouts/navbar.html
+++ b/public/layouts/navbar.html
@@ -126,7 +126,15 @@
     bottom: -5px;
     left: 50%;
     transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transition: 0.4s ease-in-out;
+    -webkit-transition: 0.4s ease-in-out;
+    -moz-transition: 0.4s ease-in-out;
+    -o-transition: 0.4s ease-in-out;
+    -ms-transition: 0.4s ease-in-out;
   }
   .nav-icons li:last-child ul {
     width: 200px;
@@ -162,6 +170,10 @@
     width: 350px;
     top: 80px;
     transition: 0.4s ease-in-out;
+    -webkit-transition: 0.4s ease-in-out;
+    -moz-transition: 0.4s ease-in-out;
+    -o-transition: 0.4s ease-in-out;
+    -ms-transition: 0.4s ease-in-out;
     display: flex;
   }
   nav .nav-icons li {
@@ -263,9 +275,17 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     opacity: 0;
     z-index: 3;
     transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    -ms-transition: 0.4s;
   }
   .nav-icons li form input[type="checkbox"]::before {
     content: "";
@@ -278,6 +298,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
   }
   .nav-icons li form label {
     display: block;
@@ -296,14 +320,25 @@
   @keyframes slide {
     0% {
       transform: translateY(-20px);
+      -webkit-transform: translateY(-20px);
+      -moz-transform: translateY(-20px);
+      -o-transform: translateY(-20px);
+      -ms-transform: translateY(-20px);
     }
     100% {
       transform: translateY(0);
+      -webkit-transform: translateY(0);
+      -moz-transform: translateY(0);
+      -o-transform: translateY(0);
+      -ms-transform: translateY(0);
     }
   }
   .fixed-nav {
     position: fixed;
     animation: 0.5s linear slide;
+    -webkit-animation: 0.5s linear slide;
+    -moz-animation: 0.5s linear slide;
+    -o-animation: 0.5s linear slide;
     background-color: #0a0526;
     z-index: 10;
   }
@@ -347,6 +382,10 @@
     right: -4px;
     font-size: 10px;
     transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    -ms-transition: 0.4s;
   }
   .left-box ul li,
   .left-box ul li a {
@@ -427,6 +466,10 @@
       top: 0;
       align-items: flex-start;
       transition: 0.4s ease-in-out;
+      -webkit-transition: 0.4s ease-in-out;
+      -moz-transition: 0.4s ease-in-out;
+      -o-transition: 0.4s ease-in-out;
+      -ms-transition: 0.4s ease-in-out;
     }
     .navbar {
       padding: 10px;
@@ -522,6 +565,6 @@
   function stopPropagation(child) {
     document.querySelector(child).onclick = function (e) {
       e.stopPropagation();
-    }
+    };
   }
 </script>
