--- a/public/css/game.css
+++ b/public/css/game.css
@@ -48,6 +48,10 @@ body {
   height: 100%;
   z-index: 100;
   transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
   opacity: 1;
 }
 .features,
@@ -253,6 +257,10 @@ main .buttons a:last-child:hover {
 }
 .demo .box:first-child i {
   transform: rotate(30deg);
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
 }
 .demo .box h2 {
   margin: 20px 0;
@@ -487,6 +495,10 @@ main .buttons a:last-child:hover {
 }
 .social .wrapper .box:first-child i {
   transform: rotate(0);
+  -webkit-transform: rotate(0);
+  -moz-transform: rotate(0);
+  -ms-transform: rotate(0);
+  -o-transform: rotate(0);
 }
 .social .wrapper .box {
   background: 0 0;
