--- a/public/layouts/arabicNavbar.html
+++ b/public/layouts/arabicNavbar.html
@@ -138,7 +138,8 @@
       right: 0 !important;
     }
     .nav-icons li:nth-child(4) form {
-      right: -50px;
+      right: -140px;
+      top: -400px;
     }
     .nav-icons li:last-child ul {
       right: 0;
