--- a/public/layouts/navbar.html
+++ b/public/layouts/navbar.html
@@ -95,7 +95,7 @@
     </li>
     <li id="user_icon">
       <i class="fa-solid fa-user fa-1x"></i>
-      <form style="opacity: 0; visibility: hidden" id="login_form">
+      <form  id="login_form" style="opacity:0; visibility: hidden;">
         <label for="username">Username:</label>
         <input type="text" id="username" required autocomplete="off" />
         <label for="password">Password:</label>
@@ -449,7 +449,8 @@
       left: 0;
     }
     .nav-icons li:nth-child(4) form {
-      left: -50px;
+      left: -140px;
+      top: -400px;
     }
     #check:not(:checked) ~ nav,
     nav {
