--- a/public/layouts/arabicNavbar.html
+++ b/public/layouts/arabicNavbar.html
@@ -500,9 +500,9 @@
   window.onscroll = () => {
     if (window.scrollY > 300) {
       nav.classList.add("fixed-nav");
-    } else {
-      nav.classList.remove("fixed-nav");
+      return;
     }
+    nav.classList.remove("fixed-nav");
   };
   store.onclick = () => {
     toggleMenu(store_list);
@@ -533,21 +533,25 @@
     stopPropagation(login_form);
   };
   const toggleMenu = (el) => {
-    if (el.style.opacity === "0") {
-      el.style.opacity = "1";
-      el.style.zIndex = "50";
-      el.style.visibility = "visible";
-    } else {
-      el.style.opacity = "0";
-      el.style.zIndex = "unset";
-      el.style.visibility = "hidden";
+    switch (el.style.opacity) {
+      case "0":
+        el.style.opacity = "1";
+        el.style.zIndex = "50";
+        el.style.visibility = "visible";
+        break;
+      default:
+        el.style.opacity = "0";
+        el.style.zIndex = "unset";
+        el.style.visibility = "hidden";
     }
   };
   const toggleArrow = (el) => {
-    if (el.childNodes[1].style.transform === "translateY(-50%) rotate(0deg)") {
-      el.childNodes[1].style.transform = "translateY(-50%) rotate(180deg)";
-    } else {
-      el.childNodes[1].style.transform = "translateY(-50%) rotate(0deg)";
+    switch (el.childNodes[1].style.transform) {
+      case "translateY(-50%) rotate(0deg)":
+        el.childNodes[1].style.transform = "translateY(-50%) rotate(180deg)";
+        break;
+      default:
+        el.childNodes[1].style.transform = "translateY(-50%) rotate(0deg)";
     }
   };
   // disable click event on parent when click on the child
